# codux

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  LICENSE  Package.resolved  Package.swift  README.ja.md  README.ko.md  README.md  README.zh-CN.md  build.rs  build.sh  dev.sh  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
apps/agent/: Cargo.toml  README.md
apps/agent/scripts/: install.sh
apps/agent/scripts/release/: package-agent.mjs  publish-agent-release.mjs  test-agent-release-scripts.mjs
apps/agent/src/: agent_worktree.rs  ai_stats.rs  cmd_config.rs  cmd_pair.rs  cmd_service.rs  cmd_start.rs  cmd_update.rs  config_store.rs  device_store.rs  git.rs  host.rs  main.rs  memory.rs  projects.rs  runstate.rs  sessions.rs  smoke.rs  terminals.rs  worktree.rs
apps/agent/src/runtime_stdio/: agent_worktree.rs  dispatch.rs  mod.rs  terminal.rs
apps/desktop/: Cargo.toml
apps/desktop/runtime/: Cargo.toml
apps/desktop/runtime-assets/i18n/: README.md  locales.json
apps/desktop/runtime-assets/icons/: icon.icns
apps/desktop/runtime-assets/scripts/: scroll-cpu-sample.sh
apps/desktop/runtime/src/: ai_history.rs  app_commands.rs  app_icon.rs  app_info.rs  async_runtime.rs  background_queue.rs  config.rs  desktop_pet.rs  dialog.rs  dock_badge.rs  file_editor_layout.rs  files.rs  host_browser.rs  i18n.rs  lib.rs  llm.rs  notification.rs  persistent_cache.rs  pet.rs  power.rs  project_activity.rs  project_open.rs  project_store.rs  remote.rs  runtime_activity.rs  runtime_bridge.rs  runtime_cache.rs  runtime_event.rs  runtime_paths.rs  runtime_terminal.rs  runtime_trace.rs  ssh.rs  system_fonts.rs  system_limits.rs  terminal_layout.rs  terminal_pty.rs  terminal_runtime.rs  tool_permissions.rs  update.rs  worktree.rs  (+1 more)
apps/desktop/scripts/release/: package-gpui.mjs  prepare-release.mjs  publish-github-release.mjs  publish-homebrew-cask.mjs  render-homebrew-cask.mjs  test-package-gpui.mjs  test-prepare-release.mjs  test-publish-github-release.mjs  test-render-homebrew-cask.mjs
apps/desktop/src/: app.rs  heroicons.rs  main.rs  terminal.rs  theme.rs
apps/desktop/src/app/: about.rs  agent_chat.rs  agent_display.rs  agent_lifecycle.rs  ai_history_mapping.rs  ai_memory_actions.rs  ai_runtime_status.rs  app_helpers.rs  app_lifecycle.rs  app_render.rs  app_select.rs  app_state.rs  db_profile_editor.rs  desktop_pet.rs  file_actions.rs  file_editor.rs  formatting.rs  git_actions.rs  macos_window.rs  native_menu.rs  pet.rs  pet_actions.rs  project_actions.rs  project_column.rs  project_column_actions.rs  project_editor.rs  quick_input.rs  quick_pick.rs  runtime_actions.rs  scroll_compat.rs  settings.rs  settings_actions.rs  shell_utils.rs  shortcuts.rs  ssh_profile_editor.rs  ssh_remote_actions.rs  status_bar.rs  task_column.rs  terminal_actions.rs  terminal_float.rs  (+21 more)
apps/desktop/src/terminal/: builtin_glyphs.rs  clipboard_windows.rs  config.rs  content.rs  element.rs  events.rs  grid_version.rs  input.rs  keys.rs  model.rs  mouse.rs  palette.rs  pane.rs  protocol.rs  render.rs  renderer.rs  tests.rs  view.rs
crates/codux-agent-driver/: Cargo.toml
crates/codux-agent-driver/examples/: codex_demo.rs
crates/codux-agent-driver/src/: codex.rs  event.rs  jsonrpc.rs  lib.rs  session.rs  timeline.rs
crates/codux-ai-history/: Cargo.toml
crates/codux-ai-history/src/: lib.rs  omp_session.rs  paths.rs
crates/codux-memory/: Cargo.toml
crates/codux-memory/src/: apply.rs  compat.rs  config.rs  extraction.rs  launch.rs  lib.rs  llm.rs  management.rs  manual.rs  memory_root.rs  profile.rs  queries.rs  queue.rs  service_launch.rs  service_management.rs  service_summary.rs  tests.rs  transcript.rs  transcript_paths.rs  types.rs
crates/codux-protocol-ffi/: Cargo.toml
crates/codux-protocol-ffi/src/: common.rs  protocol_exports.rs  runtime_exports.rs  terminal_exports.rs  transport_exports.rs
crates/codux-remote-transport/: Cargo.toml
crates/codux-remote-transport/src/: control_messages.rs  health.rs  iroh_link.rs  lib.rs  tests.rs  url_rules.rs  webrtc.rs
crates/codux-runtime-live/: Cargo.toml
crates/codux-runtime-live/src/: ai_runtime_state.rs  host_metrics.rs  lib.rs  remote_terminal_dispatch.rs  runtime_paths.rs  terminal_pty.rs  wrapper_helper.rs
runtime/: Cargo.toml
runtime/src/: ai_history.rs  ai_history_indexer.rs  ai_runtime_state.rs  app_commands.rs  app_icon.rs  app_info.rs  async_runtime.rs  config.rs  desktop_pet.rs  dialog.rs  file_editor_layout.rs  file_tree_state.rs  git_ui_state.rs  lib.rs  memory.rs  pet.rs  project_store.rs  remote.rs  runtime_activity.rs  runtime_bridge.rs  runtime_ingress.rs  runtime_paths.rs  terminal_layout.rs  terminal_pty.rs  terminal_runtime.rs  tool_permissions.rs  update.rs
runtime/src/ai_history/: helpers.rs  tests.rs  types.rs
runtime/src/ai_history_indexer/: cache.rs  state.rs  types.rs
runtime/src/ai_history_normalized/: history_driver.rs  indexing.rs  mod.rs  parsers_codewhale.rs  parsers_other.rs  paths.rs  tests.rs  usage.rs
runtime/src/ai_runtime/: assets.rs  bridge.rs  event_file.rs  mod.rs  paths.rs  snapshot.rs  state.rs  store.rs  supervisor.rs  tool_driver.rs
runtime/src/ai_usage_store/: store_core.rs  tests.rs
runtime/src/git/: tests.rs
runtime/src/memory/: compat.rs  launch.rs  manual.rs  queue.rs  service_management.rs  tests.rs  transcript.rs  types.rs
runtime/src/pet/: constants.rs  migration.rs  refresh.rs  sanitize.rs  service.rs  store.rs  tests.rs
runtime/src/project_activity/: git_jobs.rs  intervals.rs  refresh.rs  tests.rs
runtime/src/project_store/: helpers.rs  mutations.rs
runtime/src/remote/: devices.rs  envelope.rs  host.rs  http.rs  iroh_transport.rs  pairing.rs  registration.rs  sequence.rs  summary.rs  tests.rs  types.rs
runtime/src/runtime_state/: loaders.rs  mod.rs  service_ai_memory.rs  service_core.rs  service_ssh_worktree.rs  service_system.rs  state.rs  types.rs
runtime/src/settings/: default_summary.rs  options.rs  summary.rs  tests.rs
runtime/src/worktree/: service_summary.rs  tests.rs
(+1411 files in other folders)
