[workspace]
members = [
    "apps/desktop",
    "apps/desktop/runtime",
    "apps/agent",
    "apps/wrapper-helper",
    "crates/codux-ai-history",
    "crates/codux-ai-sessions",
    "crates/codux-git",
    "crates/codux-llm",
    "crates/codux-memory",
    "crates/codux-protocol",
    "crates/codux-protocol-ffi",
    "crates/codux-remote-transport",
    "crates/codux-runtime-core",
    "crates/codux-runtime-live",
    "crates/codux-terminal-core",
    "crates/codux-terminal-pty",
]
default-members = ["apps/desktop"]
resolver = "2"

[profile.dev]
debug = "line-tables-only"   # keep file:line for panics/backtraces, drop heavy var debuginfo
split-debuginfo = "unpacked"  # debuginfo stays in .o files → faster linking, smaller binary

[patch.crates-io]
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
swarm-discovery = { git = "https://github.com/dux-web/swarm-discovery.git", rev = "7bba21d90dbeb664ccd71efac3b16f612722cc59" }
