[package]
name = "codux-agent"
version = "2.0.0-beta.6"
edition = "2024"

# The cargo binary is `codux-agent` to avoid colliding with the desktop app's
# `codux` bin in the workspace. The shipped/installed command is `codux`
# (release artifacts are named `codux-agent-<version>-<os>-<arch>`), and clap's
# `bin_name` already presents it as `codux` in help/usage.
[[bin]]
name = "codux-agent"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
codux-ai-history = { path = "../../crates/codux-ai-history" }
codux-ai-sessions = { path = "../../crates/codux-ai-sessions" }
codux-git = { path = "../../crates/codux-git" }
codux-memory = { path = "../../crates/codux-memory" }
codux-protocol = { path = "../../crates/codux-protocol" }
codux-remote-transport = { path = "../../crates/codux-remote-transport" }
codux-runtime-live = { path = "../../crates/codux-runtime-live" }
codux-runtime-core = { path = "../../crates/codux-runtime-core" }
codux-terminal-core = { path = "../../crates/codux-terminal-core" }
codux-terminal-pty = { path = "../../crates/codux-terminal-pty" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
git2 = { version = "0.21.0", features = ["cred", "https", "ssh", "vendored-openssl"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
qrcode = "0.14"
fs4 = "0.13"
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
