[package]
name = "codux"
version = "2.0.0-beta.6"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
codux-agent-driver = { path = "../../crates/codux-agent-driver" }
codux-runtime = { path = "runtime" }
codux-terminal-core = { path = "../../crates/codux-terminal-core" }
flume = "0.12"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "da2a9ca7c112c93de20d8e4d9dfaf8d53536aa47", package = "gpui-component", features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "da2a9ca7c112c93de20d8e4d9dfaf8d53536aa47", package = "gpui-component-assets" }
image = "0.25.1"
parking_lot = "0.12"
qrcode = "0.14"
regex = "1"
rustls = "0.23"
rust-embed = "8.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.7"
uuid = { version = "1", features = ["v5"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "=0.26.0"
core-foundation-sys = "0.8"
objc = "0.2"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
