[package]
name = "codux-agent-driver"
version = "0.1.0"
edition = "2024"

# Phase 1 of the protocol-driven AI-CLI work: a structured "agent driver" layer
# that speaks each CLI's own protocol instead of scraping a PTY. Codex first
# (`codex app-server` JSON-RPC over stdio); Claude stream-json / OpenCode ACP
# slot in behind the same `AgentDriver` trait later.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"

[[example]]
name = "codex_demo"
path = "examples/codex_demo.rs"
