[package]
name = "codux-remote-transport"
version = "1.8.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
codux-protocol = { path = "../codux-protocol" }
futures-util = "0.3"
iroh = "1.0.0"
iroh-blobs = "0.103.0"
iroh-tickets = "1.0.0"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["io-util", "sync", "time"] }
url = "2.5.7"

[target.'cfg(target_os = "android")'.dependencies]
iroh-dns = "1.0.0"
