[package]
name = "codux-runtime"
version = "1.7.6"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
alacritty_terminal = "0.25.1"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
codux-protocol = { path = "../../../crates/codux-protocol" }
codux-remote-transport = { path = "../../../crates/codux-remote-transport" }
codux-runtime-core = { path = "../../../crates/codux-runtime-core" }
codux-terminal-core = { path = "../../../crates/codux-terminal-core" }
codux-terminal-pty = { path = "../../../crates/codux-terminal-pty" }
flume = "0.12"
parking_lot = "0.12"
redb = "4.1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
semver = "1"
sha2 = "0.10"
socket2 = { version = "0.5", features = ["all"] }
sys-locale = "0.3"
uuid = { version = "1", features = ["v4", "v5"] }
percent-encoding = "2.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "system-proxy"] }
url = "2.5.7"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
genai = "0.6.1"
git2 = { version = "0.21.0", features = ["cred", "https", "ssh", "vendored-openssl"] }
hkdf = "0.12"
image = "0.25.1"
libc = "0.2"
llm-json-repair = "0.1"
minisign-verify = "0.2.5"
notify = "8"
notify-rust = { version = "4.17.0", default-features = false }
rand = "0.8"
zed-font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", package = "zed-font-kit", version = "0.14.1-zed" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
rfd = { version = "0.17.2", default-features = false, features = ["common-controls-v6"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
dispatch2 = "0.3"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSButton", "NSControl", "NSDockTile", "NSImage", "NSOpenPanel", "NSPanel", "NSResponder", "NSSavePanel", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSProcessInfo", "NSString", "NSURL"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_System_Power", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
